[gd_scene load_steps=4 format=3 uid="uid://cm3sdx2an61fm"]

[ext_resource type="Script" uid="uid://d26ag2i5t0ue2" path="res://top_panel_ui.gd" id="1_er6pf"]
[ext_resource type="Texture2D" uid="uid://2dlo0dauhj4t" path="res://assets/icons/currencies/coin.png" id="2_ftuxj"]
[ext_resource type="Texture2D" uid="uid://bick04tcuw36i" path="res://assets/icons/minerals/bread.png" id="3_vhdv4"]

[node name="TopPanelUI" type="Control"]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2
script = ExtResource("1_er6pf")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_right = 250.0
offset_bottom = 100.0
grow_horizontal = 2

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2

[node name="YearLabel" type="Label" parent="MarginContainer/Panel" groups=["main_ui"]]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 22.3333
grow_horizontal = 2
text = "Year 1"

[node name="EndTurnButton" type="Button" parent="MarginContainer/Panel" groups=["main_ui"]]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -8.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 0
text = "End Turn"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 10

[node name="GoldContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="GoldIcon" type="TextureRect" parent="MarginContainer/HBoxContainer/GoldContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = ExtResource("2_ftuxj")
expand_mode = 1

[node name="GoldCount" type="Label" parent="MarginContainer/HBoxContainer/GoldContainer"]
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="FoodContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="FoodIcon" type="TextureRect" parent="MarginContainer/HBoxContainer/FoodContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = ExtResource("3_vhdv4")
expand_mode = 1

[node name="FoodCount" type="Label" parent="MarginContainer/HBoxContainer/FoodContainer"]
layout_mode = 2
text = "25"
horizontal_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="Button" type="Button" parent="MarginContainer/HBoxContainer2"]
layout_mode = 2
text = "Perks"

[node name="Button2" type="Button" parent="MarginContainer/HBoxContainer2"]
layout_mode = 2
text = "Runes"

[node name="Button3" type="Button" parent="MarginContainer/HBoxContainer2"]
layout_mode = 2
text = "Quests"

[connection signal="pressed" from="MarginContainer/Panel/EndTurnButton" to="." method="_on_end_turn_button_pressed"]
